<resources>
    <string name="app_name">AndroidFundamentalsFall2021</string>
    <string name="happy_birthday_android">Happy Birthday, Android!</string>
    <string name="my_first_textview">My first TextView</string>
    <string name="this_is_my_second_textview">This is my second TextView</string>
    <string name="sample_1">Sample 1</string>
    <string name="sample_2">Sample 2</string>
    <string name="i_am_a_button">I am a Button :)</string>
    <string name="please_add_here_your_email_address">Please add here your email address</string>
    <string name="this_is_a_checkbox">This is a CheckBox</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="this_is_a_switch">This is a Switch</string>
    <string name="hello">hello</string>
    <string name="username">Username</string>
    <string name="please_insert_your_username">Please insert your username</string>
    <string name="password">Password</string>
    <string name="please_insert_your_password">Please insert your password</string>
    <string name="login">Login</string>
    <string name="long_text">ScrollView - scrollable view that contains one child view
FrameLayout - block out an area on the screen to display a single item
WebView - displays web pages
RelativeLayout - arranges views relative to other views/parent
RecyclerView* - scrollable "list" of views or view groups
ConstraintLayout* - position and size widgets in a flexible way
        ScrollView - scrollable view that contains one child view
FrameLayout - block out an area on the screen to display a single item
WebView - displays web pages
RelativeLayout - arranges views relative to other views/parent
RecyclerView* - scrollable "list" of views or view groups
ConstraintLayout* - position and size widgets in a flexible way
        ScrollView - scrollable view that contains one child view
FrameLayout - block out an area on the screen to display a single item
WebView - displays web pages
RelativeLayout - arranges views relative to other views/parent
RecyclerView* - scrollable "list" of views or view groups
ConstraintLayout* - position and size widgets in a flexible way
        ScrollView - scrollable view that contains one child view
FrameLayout - block out an area on the screen to display a single item
WebView - displays web pages
RelativeLayout - arranges views relative to other views/parent
RecyclerView* - scrollable "list" of views or view groups
ConstraintLayout* - position and size widgets in a flexible way
</string>
    <string name="first_textview">first textview</string>
    <string name="second_textview">second textview</string>
    <string name="parent_right">parent right</string>
    <string name="center_in_parent">center in parent</string>
    <string name="select_an_android_version">Select an Android version</string>
    <string name="cakes_activity">Cakes Activity</string>
    <string name="call_a_number">Call a number</string>
    <string name="open_a_webpage">Open a webpage</string>
    <string name="launch_start_for_result">Launch Start for Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_host_activity">Start Host Activity</string>
    <string name="start_second_host_activity">Start Second Host Activity</string>
    <string name="second_activity_label">This is the SecondHostActivity (dynamic fragment added)</string>
    <string name="send_data_from_activity_to_fragment">Send data from Activity to Fragment</string>
    <string name="send_data_with_method">Send data with method</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="send_numbers">Send numbers</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="home">home</string>
    <string name="slideshow">slideshow</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="datepicker_sample">DatePicker Sample</string>
    <string name="open_datepicker">Open DatePicker</string>
    <string name="open_alerts_activity">Alerts Activity</string>
    <string name="open_timepicker">Open TimePicker</string>
    <string name="error_occured">error</string>
    <string name="retry">retry</string>
    <string name="retry_message">please try again</string>
    <string name="open_github_activity">Github Activity</string>
    <string name="add_word">Add word</string>
    <string name="hint_word">Add a word</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Empty</string>
    <string name="words_with_room">Words with Room</string>
</resources>