<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_space"
    android:background="@color/purple_200"
    tools:context=".fragment.SumFragment">

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:inputType="number" />

    <Button
        android:id="@+id/sendNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_numbers" />
</LinearLayout>